err/onlinetorch-website-url-finder.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/google_search'...
Compiling './lib/python3.5/site-packages/google_search/google_search.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (google_search.py, line 33)
Listing './lib/python3.5/site-packages/link_extractor'...
Compiling './lib/python3.5/site-packages/link_extractor/link_extractor.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (link_extractor.py, line 55)
Compiling './lib/python3.5/site-packages/neu.py'...
***   File "./lib/python3.5/site-packages/neu.py", line 10
    print str
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/onlinetorch_website_url_finder-0.1.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './lib/python3.5/site-packages/website_url_finder.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (website_url_finder.py, line 44)
Listing './share'...
Listing './share/python-wheels'...
